--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # https://raw.githubusercontent.com/github/gitignore/main/Jekyll.gitignore
-_site/
+#_site/
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
