--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,28 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Robert’s blog
+author:
+  name: Robert Crews
+  # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  A place to list articles that I've written.
+# baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://rcrews.github.io"
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+minima:
+  skin: auto
+social_links:
+  - platform: linkedin
+    user_url: https://www.linkedin.com/in/robertpcrews/
+    # title:
+  - platform: github
+    user_url: https://github.com/rcrews/
+    # title:
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -53,3 +60,6 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+exclude:
+  - docs/
